[package]
name = "hermit_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
getopts = "0.2"
log = { version = "0.4", features = ["kv_unstable"]}
parking_lot = "0.12"
r2d2 = "0.8"
redis = { version = "0.25", defaults-features = false, features = ["acl", "streams", "geospatial", "script", "r2d2"] }
route-recognizer = "0.3"
scheduled-thread-pool = "0.2"
simple_logger = "4.1.0"
tiny_http = "0.12.0"
wasmi = "0.28"
wit-bindgen-wasmi = { git = "https://github.com/flavio/wit-bindgen.git", branch = "wasmi" }

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { version = "0.9", features = ["smp", "pci", "fsgsbase", "tcp", "dhcpv4"] }

[patch.crates-io]
hyper-util = { git = "https://github.com/hermit-os/hyper-util.git", branch = "hermit" }
mio = { git = "https://github.com/hermit-os/mio.git", branch = "v0.8.x" }
rustls-rustcrypto = { git = "https://github.com/RustCrypto/rustls-rustcrypto", rev = "e6d5ed9652228ff09e56fee2534b6f60877fb7b8" }
socket2 = { git = "https://github.com/hermit-os/socket2.git", branch = "hermit" }
tokio = { git = "https://github.com/hermit-os/tokio.git", branch = "hermit" }
tokio-rustls = { git = "https://github.com/hermit-os/tokio-rustls.git", branch = "v/0.26.0" }
